btn re-aligned & some other fixes

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -772,6 +772,9 @@ $heading-color: $dark;
   /* 48rem == 768px */
   @media screen and (max-width: 48rem) {
     // hero
+    .hero-row {
+      margin-top: 0 !important;
+    }
     .hero-img {
       max-height: 450px; /* Adjust image height for desktop */
     }
@@ -805,7 +808,7 @@ $heading-color: $dark;
     .news-card-text { 
       font-size: 1rem; 
     } 
-    .btn-outline-primary { 
+    .more-news-btn { 
       margin-top: 20px;
     }
 
@@ -819,10 +822,12 @@ $heading-color: $dark;
   
   /* Stack content vertically on small screens */
   .col-md-6.py-5.hero-textbox {
-    padding-top: 1rem !important; /* Reduce top padding */
+    padding-top: 0.2rem !important; /* Reduce top padding */
     padding-bottom: 1rem !important; /* Reduce bottom padding */
   }
-
+ .container .news-ticker{
+  padding: 0.6rem 1rem !important ;
+ }
   .row.hero-row {
     display: block;
     text-align: center;
@@ -836,7 +841,7 @@ $heading-color: $dark;
   }
   .xl-text {
     font-size: 1.7rem; /* Adjust font size for smaller devices */
-    margin: 1rem 0 0.5rem;
+    margin: 0.4rem 0 0.5rem;
   }
 
   .lead {
